clusters/home/apps/paperlessngx/paperlessngx/configs/paperlessngx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperlessngx-ingressroute
  namespace: paperlessngx
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://paperlessngx.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Paperlessngx
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: paperlessngx # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Paperlessngx
    #gethomepage.dev/widget.type: "paperlessngx"
    #gethomepage.dev/widget.url: "https://paperlessngx.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`paperlessngx.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: paperlessngx
      port: 10216
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: paperlessngx-certificate-secret
